--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -76,6 +76,27 @@ central-ledger-db:
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
     username: central_ledger
+bulk-mongodb:
+  external_resource_config:
+    cluster_size: 3
+    master_username: app_owner
+    password_key_name: bulk_mongodb_password
+    instance_address_key_name: bulk_mongodb_address
+    instance_class: db.t3.medium
+    db_port: 27017
+    apply_immediately: false
+    auto_minor_version_upgrade: false
+    snapshot_identifier: ""
+    retention_period: 1
+    preferred_backup_window: 01:00-04:00
+    preferred_maintenance_window: Sun:04:00-Sun:06:00
+    cluster_parameters: []
+    cluster_family: docdb5.0
+    engine: docdb
+    engine_version: 5.0.0 
+    storage_encrypted: true
+    skip_final_snapshot: true
+    enabled_cloudwatch_logs_exports: []
 reporting-events-mongodb:
   external_resource_config:
     cluster_size: 3
