--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -57,7 +57,7 @@ spec:
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_helm_version}"
 
           - name: "utils_capi_capi_rook_ceph_rbd_pool_replication_size"
-            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rbd_pool_replication_size}"
+            value: "\"${ARGOCD_ENV_utils_capi_capi_rook_ceph_rbd_pool_replication_size}\""
 
           - name: "utils_capi_capi_rook_ceph_rgw_external_ip"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
