--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -64,7 +64,7 @@ crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_packages_objectstores_version: "v17-14259904996-1"
 crossplane_packages_utils_version: "v0.3.0"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
-crossplane_packages_sc_bootstrap_version: "v0.1.0-pr41-14390737656"
+crossplane_packages_sc_bootstrap_version: "v0.1.0"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14402159611"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
 crossplane_packages_docdb_version: "v12-14219020439-1"
