--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -6,7 +6,6 @@ vault_tf_provider_version: "~> 3.16"
 zitadel_tf_provider_version: "99.99.99"
 netbird_tf_provider_version: "99.99.99"
 grafana_tf_provider_version: 3.6.0
-argocd_helm_version: "8.0.1"
 reflector_helm_version: "9.0.322"
 reloader_helm_version: "2.0.0"
 crossplane_helm_version: "1.19.0"
@@ -15,6 +14,14 @@ netbird_helm_version: "1.5.6"
 netbird_image_version: "0.41.3"
 netbird_client_version: "0.41.3"
 netbird_dashboard_image_version: "v2.10.0"
+
+# argocd
+argocd_helm_version: "8.0.1"
+argocd_helm_kube_version: "1.31.0"
+argocd_helm_git_plugin_version: "1.3.0"
+argocd_envsubst_version: "1.0.3"
+argocd_rollout_extension_version: "0.3.7"
+download_tools_image_version: "1.22.4-alpine3.20"
 #netbird db settings
 netbird_rdbms_provider: "dbaas"
 #netbird db percona specific
