--- a/gitops/argo-apps/overlays/local/storage-cluster/sc-argocd.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/sc-argocd.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: '-20'
+    argocd.argoproj.io/compare-options: ServerSideDiff=false
     # argocd.argoproj.io/sync-options: Prune=false,Replace=false
 
   # Add this finalizer ONLY if you want these to cascade delete (A cascade delete, deletes both the app and its resources, rather than only the app.)
