--- a/gitops/argo-apps/overlays/local/storage-cluster/sc-argocd.yaml
+++ b/gitops/argo-apps/overlays/local/storage-cluster/sc-argocd.yaml
@@ -6,7 +6,6 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: '-20'
     argocd.argoproj.io/compare-options: ServerSideDiff=false
-    # argocd.argoproj.io/sync-options: Prune=false,Replace=false
 
   # Add this finalizer ONLY if you want these to cascade delete (A cascade delete, deletes both the app and its resources, rather than only the app.)
   # finalizers:
@@ -45,7 +44,7 @@ spec:
       targetRevision: 8.0.1
 
       helm:
-        releaseName: sc-bootstrap-g5zkq-argocd
+        releaseName: argocd-release
         valuesObject:
           fullnameOverride: argocd
           crds:
